A......... [ZBX-6407] improved data retrieval performance for CTrigger get() with post SQL filtering (Toms)
........S. [ZBX-6493] improved performance when working with Oracle by changing memory based prefetch to rows based (dimir)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Chinese (China), Latvian, Spanish and Turkish translations; thanks to Zabbix translators (Richlv)

Bug fixes:
..F....... [ZBX-6652] added item validation in bar reports page (Ivo)
...G...... [ZBX-6730] fixed zabbix_agentd -t duplicate printing of parameters (igors)
........S. [ZBX-6801] fixed processing of host availability data received from proxy (wiper)
....I..... [ZBX-6637] added -m64 compilation flag for Solaris to be able to understand all attributes of 64-bit processes (igors)
..F....... [ZBX-6761] fixed dbConditionInt() performance (Eduard)
........S. [ZBX-6681] fixed bug when one time maintenance period was ignored if it started before maintenance active time (wiper)
.......P.. [ZBX-6630] faster proxy configuration synchronization (Andris)
...G...... [ZBX-6655] fixed possible agent crash when processing system.sw.packages[] (igors)
A......... [ZBX-6725] fixed undefined indexes in item list view when trigger has items from different hosts (Toms)
....I..... [ZBX-6700] improved PostgreSQL upgrade patch (dotneft, Oleg)
..F....... [ZBX-6682] added value mapping in map labels (Oleg)
A......... [ZBX-6673] fixed errors after parent graph deleting (Oleg)
.......PS. [ZBX-6610] fixed invalid next check values of IPMI items (dimir)
....I..... [ZBX-6674] fixed items description in the default data set (Oleg)
A......... [ZBX-6644] fixed sorting by history and trends fields in itemprototype.get API (Ivo)
........S. [ZBX-6598] fixed deleting of big amount of escalations by escalation process (Sasha)
...G...PS. [ZBX-6605] fixed bind() error when SourceIP is used (Andris)